@@ -235,3 +235,4 @@ Revision	Version Updated		Log Message
 214		C++			Flags and modifiers now influence political reforms.
 215		C++			Build_and_test.bat
 216		C++			DasGuntLord01's recommended changes.
+217		C++			Improve fairness of many-to-one owner and core allocations.
